--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
   "dependencies": {
     "axios": "^1.13.2",
     "cheerio": "^1.1.2",
-    "selenium-webdriver": "^4.38.0"
+    "jsdom": "^27.2.0",
+    "pdfkit": "^0.17.2",
+    "prettier": "^3.6.2",
+    "puppeteer": "^24.30.0",
+    "selenium-webdriver": "^4.38.0",
+    "turndown": "^7.2.2"
   }
 }
